--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MovieApp</string>
+
+    <string name="facebook_app_id">272777190049686</string>
+    <string name="fb_login_protocol_scheme">fb272777190049686</string>
+
+
 </resources>
